--- a/carAccidentData.ipynb
+++ b/carAccidentData.ipynb
@@ -127,7 +127,7 @@
     "\"\"\"\n",
     "Accidents per Year Bar Graph\n",
     "This code generates a bar graph showing the number of accidents per year\n",
-    "It utilizes the 'Accident year' column from the provided dataset, displaying the data in a bar chart\n",
+    "It utilizes the 'Accident year' column and displays the data in a bar chart\n",
     "\"\"\"\n",
     "# Graph to display Accidents per year\n",
     "data[\"Accident year\"].value_counts().sort_index().plot(kind=\"bar\")\n",
