--- a/carAccidentData.ipynb
+++ b/carAccidentData.ipynb
@@ -192,7 +192,7 @@
     "\"\"\"\n",
     "Monthly Accidents Line Graph\n",
     "This code creates a line graph to illustrate the number of accidents per month\n",
-    "It utilizes the 'Accident month' column from the provided dataset, sorting the data by month\n",
+    "It utilizes the 'Accident month' column sorts the data by month\n",
     "The graph is labeled with months and displays the trend of accidents throughout the year\n",
     "\"\"\"\n",
     "# Graph to display Accidents per month\n",
@@ -321,7 +321,7 @@
     "\"\"\"\n",
     "Weather Condition Distribution Graph\n",
     "This code generates a pie chart to visualize the distribution of weather conditions in accidents.\n",
-    "It uses the 'Weather condition' column from the dataset and displays the percentages for each category.\n",
+    "It uses the 'Weather condition' column and displays the percentages for each category.\n",
     "\"\"\"\n",
     "# Graph for weather condition\n",
     "data[\"Weather condition\"].value_counts().plot(kind=\"pie\", autopct=\"%1.1f%%\")\n",
